--- a/src/components/ButtonContact/stylesButton.css
+++ b/src/components/ButtonContact/stylesButton.css
@@ -1,8 +1,10 @@
 button{
     background: #5A87C2;
-    padding: 10%;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-bottom: 30px;    
     font-size:small;
     border: none;
     border-radius: 5px;
