--- a/src/container/styles.css
+++ b/src/container/styles.css
@@ -4,6 +4,13 @@
 }
 
 body{
-    
+    background: #F5F5F5;
+    width: 100%;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
 }
 
