--- a/src/components/About/stylesAbout.css
+++ b/src/components/About/stylesAbout.css
@@ -1,7 +1,5 @@
 .about{
     padding: 5%;
-    margin-top: 20%;
-    margin-bottom: 20%;    
 }
 
 .container{
@@ -9,6 +7,10 @@
 }
 
 .section1{
+    padding: 20px;
+}
+
+.section2{
     padding: 20px;
 }
 
@@ -20,3 +22,42 @@
     
 }
 
+
+@media (min-width: 768px) {
+    .section1{
+        display: flex;
+        align-items: center;
+
+    }
+    .section1{
+        display: grid;
+        grid-template: auto auto / auto auto; 
+        grid-gap: 10px 5px;
+        
+    }
+    .section1-1{
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    .section1-2{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .section2{
+        display: grid;
+        grid-template: auto auto / auto auto; 
+        grid-gap: 10px 5px;
+        
+    }
+    .section2-1{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .section2-2{
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    .img-about{
+        width: 100%;    
+    }
+}
