--- a/src/components/Contact/stylesContact.css
+++ b/src/components/Contact/stylesContact.css
@@ -1,7 +1,20 @@
-.contactus{
+.contact{
     text-align: center;
     padding: 5%;
-    margin-top: 20%;
-    margin-bottom: 20%;
+   
 }
 
+.img-contact{
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .contact{
+        display: flex;
+        align-items: center;
+    }
+    .img-contact{
+        display: block;
+        width: 100%;  
+    }
+}
