--- a/src/components/About/stylesAbout.css
+++ b/src/components/About/stylesAbout.css
@@ -18,8 +18,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
-    width: 80vw;
-    
+    width: 80vw;    
 }
 
 
@@ -38,10 +37,14 @@
     .section1-1{
         grid-column: 2/3;
         grid-row: 1/2;
+        margin-left: 25%;
+        margin-right: 25%;
+        text-align: left;
     }
     .section1-2{
         grid-column: 1/2;
         grid-row: 1/2;
+        
     }
     .section2{
         display: grid;
@@ -52,6 +55,9 @@
     .section2-1{
         grid-column: 1/2;
         grid-row: 2/3;
+        margin-left: 25%;
+        margin-right: 25%;
+        text-align: left;
     }
     .section2-2{
         grid-column: 2/3;
