--- a/src/components/NavBar/stylesNavbar.css
+++ b/src/components/NavBar/stylesNavbar.css
@@ -7,7 +7,7 @@ header{
 }
 
 header nav{    
-    opacity: 0.6;
+    opacity: 0.6;    
     width: 100%;    
     position: fixed;    
     background-color: rgba(17, 17, 17, 0.692);
@@ -57,6 +57,17 @@ header nav ul li {
 }
 
 @media (min-width: 768px) {
+    .cont-menu{
+        display: flex;
+        align-items: center;
+        justify-content: end;   
+    }
+    .bt-menu{
+        text-transform:uppercase;
+    }
+    .fa-bars{
+        display: none;
+    }
     .header{
         display: flex;
     }    
