--- a/src/components/NavBar/stylesNavbar.css
+++ b/src/components/NavBar/stylesNavbar.css
@@ -2,39 +2,43 @@ header{
     width: 100%;        
 }
 
-.cont-menu{
-    width: 100%;  
-}
-
 header nav{    
-    opacity: 0.6;    
+    opacity: 0.9;    
     width: 100%;    
     position: fixed;    
-    background-color: rgba(17, 17, 17, 0.692);
- }
+    background-color: #5A87C2
+}
 
-.menu{   
-    width: 100%;  
+.menu{       
     display: flex;
     justify-content: space-between;
 }
 
+.logo{
+    padding-left: 10px;
+    font-weight: bolder;
+    padding-top: 10px;
+    font-size: 20px;
+}
+
 .fa-bars{
-    font-size: 40px;
+    font-size: 30px;
+}
+
+header nav ul {      
+    list-style: none;
+    position: absolute;
+    left:-100%;
+    transition: top 1s;    
+    z-index: 1;
+    background-color: #5A87C2;  
 }
 
 .bt-menu{
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;   
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 25px;
-}
-
-header nav ul {  
-    list-style: none;
+    background-color: white;        
+    color: black;   
+    z-index: 2;
+    position: relative; 
 }
 
 header nav ul li {  
@@ -48,7 +52,7 @@ header nav ul li:hover {
 header nav ul li a {
     text-decoration: none;
     color: rgb(233, 227, 227);
-    padding: 20px;
+    padding: 10px;
     display: block;
 }
 
@@ -62,18 +66,22 @@ header nav ul li {
         align-items: center;
         justify-content: end;   
     }
-    .bt-menu{
+    .logo{
         text-transform:uppercase;
+        width: 100%;
+        margin-top: 20px;
     }
+    
     .fa-bars{
-        display: none;
+        color: white;
     }
     .header{
         display: flex;
     }    
     header nav{    
         position: relative;    
-        background-color: white;       
+        background-color: white;    
+        width: 75%;   
     }
     header nav ul {  
         display: flex;
