--- a/src/components/NavBar/stylesNavbar.css
+++ b/src/components/NavBar/stylesNavbar.css
@@ -1,97 +1,67 @@
-header{
+.cont-navbar{
     width: 100%;        
 }
-
-header nav{    
-    opacity: 0.9;    
-    width: 100%;    
-    position: fixed;    
-    background-color: #5A87C2
-}
-
-.menu{       
+.navb{
     display: flex;
     justify-content: space-between;
+    position: relative;    
 }
-
-.logo{
-    padding-left: 10px;
-    font-weight: bolder;
-    padding-top: 10px;
-    font-size: 20px;
+.bt-menu{
+    background-color: white;
+    color: black;
 }
-
 .fa-bars{
     font-size: 30px;
 }
 
-header nav ul {      
-    list-style: none;
-    position: absolute;
-    left:-100%;
-    transition: top 1s;    
-    z-index: 1;
-    background-color: #5A87C2;  
+.menu{
+    opacity: 0.9;
+    display: flex;
+    position: absolute;    
+    right: 0;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #5A87C2; 
+    
+}
+.menu-hidden{
+    top:-100%;
+    opacity: 0.9;
+    display: flex;
+    position: absolute;    
+    right: 0;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #5A87C2; 
+}
+.link{
+    text-decoration: none;    
+    color: white;
 }
 
-.bt-menu{
-    background-color: white;        
-    color: black;   
-    z-index: 2;
-    position: relative; 
-}
-
-header nav ul li {  
-    width: 100%; 
-}
-
-header nav ul li:hover {
-    border: 2px solid white;
-}
-
-header nav ul li a {
-    text-decoration: none;
-    color: rgb(233, 227, 227);
-    padding: 10px;
-    display: block;
-}
-
-header nav ul li {
-    float: left;
-}
 
 @media (min-width: 768px) {
-    .cont-menu{
+    .container{
         display: flex;
-        align-items: center;
-        justify-content: end;   
+        align-items: center;  
+        justify-content: space-between;     
     }
-    .logo{
+    .logo{  
+        
         text-transform:uppercase;
-        width: 100%;
-        margin-top: 20px;
     }
-    
-    .fa-bars{
-        color: white;
+    .bt-menu{
+        display: none;
     }
-    .header{
-        display: flex;
-    }    
-    header nav{    
-        position: relative;    
-        background-color: white;    
-        width: 75%;   
+    .menu{         
+        display: flex;    
+        justify-content: end;   
+        flex-direction: row;
+        background-color: white;  
     }
-    header nav ul {  
-        display: flex;
-        align-items: center;
-        justify-content: end;  
-    }
-    header nav ul li {  
-        width: auto; 
-    }
-    header nav ul li a {        
-        color: black;        
+    .link{
+        color: black;
     }
 }
