--- a/src/components/Footer/stylesFooter.css
+++ b/src/components/Footer/stylesFooter.css
@@ -2,20 +2,27 @@
     padding: 10px;
 }
 
-.container{    
+.container{ 
+    display: inline;   
     margin: 20px;
     text-decoration: none;
-    font-size: 15px;
+    
 }
 
 .container ul li{
     margin: 5px;
     list-style: none;
 }
+p{
+    font-size: 15px;
+}
 
 @media (min-width: 768px) {
-    cont-tot{
+    .cont-tot{
         display: flex;
         justify-content: space-between;
+    }
+    .cont-tot .container{
+        display: block;
     }
 }
